Bug 1845104 Page and collection horizontal scroll
Took out overflow-x: auto; in .view-container, can't see it
breaking anything else so might be redundant legency css. Pages
and Collections should no longer have an orange horizontal scroll
under it.

behatnotneeded

--- a/htdocs/theme/raw/sass/layout/_layout.scss
+++ b/htdocs/theme/raw/sass/layout/_layout.scss
@@ -127,7 +127,6 @@ iframe {
 .view-container {
     margin-top: 15px;
     clear: both;
-    overflow-x: auto;
 }
 
 .view-description {
